--- a/실습코드/004. Extend/style.css
+++ b/실습코드/004. Extend/style.css
@@ -1,5 +1,5 @@
 .profile-user, .comment-user {
-  background-image: url("./programmer.png");
+  background-image: url("./user.png");
   background-size: cover;
   background-position: 50% 50%;
   border-radius: 50%;
