✅ SCSS 조건문,반복문,함수

--- a/실습코드/005. 조건문, 반복문, 함수/style.css
+++ b/실습코드/005. 조건문, 반복문, 함수/style.css
@@ -28,62 +28,62 @@ body.dark .banner {
   border-left-color: black;
 }
 
-.test1 {
+.photo-box:nth-child(1) {
   background-image: url("../assets/phoster1.png");
 }
 
-.test2 {
+.photo-box:nth-child(2) {
   background-image: url("../assets/phoster2.png");
 }
 
-.test3 {
+.photo-box:nth-child(3) {
   background-image: url("../assets/phoster3.png");
 }
 
-.test4 {
+.photo-box:nth-child(4) {
   background-image: url("../assets/phoster4.png");
 }
 
-.test5 {
+.photo-box:nth-child(5) {
   background-image: url("../assets/phoster5.png");
 }
 
-.icon-#dad5d2 {
+.color-circle:nth-child(1) {
   background: #dad5d2;
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-.icon-#3a3532 {
+.color-circle:nth-child(2) {
   background: #3a3532;
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-.icon-#375945 {
+.color-circle:nth-child(3) {
   background: #375945;
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-.icon-#5b8767 {
+.color-circle:nth-child(4) {
   background: #5b8767;
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-.icon-#a6c198 {
+.color-circle:nth-child(5) {
   background: #a6c198;
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-.icon-#dbdfc8 {
+.color-circle:nth-child(6) {
   background: #dbdfc8;
   width: 20px;
   height: 20px;
@@ -91,7 +91,7 @@ body.dark .banner {
 }
 
 .sup {
-  font-size: 7.63964px;
+  font-size: 12.36094px;
 }
 
 .sidebar {
