--- a/실습코드/005. 조건문, 반복문, 함수/style.scss
+++ b/실습코드/005. 조건문, 반복문, 함수/style.scss
@@ -1,19 +1,22 @@
+// 조건문 기본
 @mixin avatar($size, $circle: false) {
-    width: $size;
-    height: $size;
-  
-    @if $circle {
-      border-radius: $size / 2;
-    }
-  }
-  
-  .square-av {
-    @include avatar(100px, $circle: false);
-  }
-  .circle-av {
-    @include avatar(100px, $circle: true);
-  }
+  width: $size;
+  height: $size;
 
+  @if $circle {
+    border-radius: $size / 2;
+  }
+}
+
+.square-av {
+  @include avatar(100px, $circle: false);
+}
+.circle-av {
+  @include avatar(100px, $circle: true);
+}
+
+
+// 조건문 else 사용 가능
 $light-background: #f2ece4;
 $light-text: #036;
 $dark-background: #6b717f;
@@ -36,71 +39,81 @@ $dark-text: #d2e1dd;
   }
 }
 
+
+// 조건문 else if 사용
 @mixin triangle($size, $color, $direction) {
-    height: 0;
-    width: 0;
-  
-    border-color: transparent;
-    border-style: solid;
-    border-width: ($size/2);
-  
-  
-    @if $direction == up {
-      border-bottom-color: $color;
-    } @else if $direction == right {
-      border-left-color: $color;
-    } @else if $direction == down {
-      border-top-color: $color;
-    } @else if $direction == left {
-      border-right-color: $color;
-    } @else {
-      @error "Unknown direction #{$direction}.";
-    }
-  }
-  
-  .next {
-    @include triangle(5px, black, right);
-  }
+  height: 0;
+  width: 0;
 
-  @for $i from 1 through 5 {
-    .test#{$i} {
-      background-image: url("../assets/phoster#{$i}.png");
-    }
-  } 
+  border-color: transparent;
+  border-style: solid;
+  border-width: ($size/2);
 
 
-  $color-palette: #dad5d2 #3a3532 #375945 #5b8767 #a6c198 #dbdfc8;
+  @if $direction == up {
+    border-bottom-color: $color;
+  } @else if $direction == right {
+    border-left-color: $color;
+  } @else if $direction == down {
+    border-top-color: $color;
+  } @else if $direction == left {
+    border-right-color: $color;
+  } @else {
+    @error "Unknown direction #{$direction}.";
+  }
+}
 
-  @each $color in $color-palette {
-    .icon-#{$color}{
-      background: $color;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-    }
-  }
+.next {
+  @include triangle(5px, black, right);
+}
 
-  @function scale-below($value, $base, $ratio: 1.618) {
-    @while $value > $base {
-      $value: ($value/$ratio);
-    }
-    @return $value;
-  }
-  
-  $normal-font-size: 16px;
-  .sup {
-    font-size: scale-below(20px, 8px);
-  }
 
-  @function pow($base, $exponent) { 
-    $result: 1;
-    @for $_ from 1 through $exponent {
-      $result: $result * $base;
-    }
-    @return $result;
+// 반복문
+@for $i from 1 through 5 {
+  .photo-box:nth-child(#{$i}) {
+    background-image: url("../assets/phoster#{$i}.png");
   }
-  
-  .sidebar {
-    float: left;
-    margin-left: pow(4, 3) * 1px;
+} 
+
+
+// each
+$color-palette: #dad5d2 #3a3532 #375945 #5b8767 #a6c198 #dbdfc8;
+
+@each $color in $color-palette {
+  $i: index($color-palette, $color); //index는 list의 내장함수
+  .color-circle:nth-child(#{$i}) {
+    background: $color;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
   }
+}
+
+
+// while, function
+@function scale-below($value, $base, $ratio: 1.618) {
+  @while $value > $base {
+    $value: ($value/$ratio);
+  }
+  @return $value;
+}
+
+$normal-font-size: 16px;
+.sup {
+  font-size: scale-below(20px, 16px);
+}
+
+
+// 거듭제곱
+@function pow($base, $exponent) { 
+  $result: 1;
+  @for $_ from 1 through $exponent {
+    $result: $result * $base;
+  }
+  @return $result;
+}
+
+.sidebar {
+  float: left;
+  margin-left: pow(4, 3) * 1px;
+}
